fix layout issues (#2655)

--- a/demo-shell/src/styles.scss
+++ b/demo-shell/src/styles.scss
@@ -4,6 +4,7 @@
 body, html {
     margin: 0;
     height: 100%;
+    overflow: hidden;
     font-size: mat-font-size($alfresco-typography, body-1);
     font-family: mat-font-family($alfresco-typography);
     line-height: mat-line-height($alfresco-typography, body-1);
